# ORDRA-AI

./: .env.example  .gitignore  CURSOR_TASKFILE.md  README.md  main.py  pyproject.toml
apps/api/: __init__.py  main.py
apps/ui/: streamlit_app.py
demo/: generate_po_pdf.py  run_one_click_demo.py
ordra/: __init__.py
ordra/agents/: __init__.py  decision_verifier.py  verifier_agent.py
ordra/config/: customer_identity.yaml
ordra/connectors/: __init__.py  o365_client.py
ordra/contracts/: __init__.py  clause_generator.py
ordra/core/: __init__.py  enums.py  models.py
ordra/db/: __init__.py  sqlite.py
ordra/identity/: __init__.py  customer_resolver.py
ordra/llm/: __init__.py  openai_client.py
ordra/llm/prompts/: extract_po.j2  refine_po.j2  verifier_decision.txt  verifier_extraction.txt
ordra/llm/schemas/: extracted_order.schema.json
ordra/memory/: __init__.py  episodic.py
ordra/orchestration/: __init__.py  dag_spec.py  dag_spec.yaml  executor.py
ordra/policies/: __init__.py  evaluator.py  order_policies.yaml  simulator.py
ordra/pricing/: __init__.py  calculator.py  confidence_pricing.yaml
ordra/runtime/: __init__.py  handlers.py  run_job.py
ordra/sap/: __init__.py  sap_client.py  validation.py
ordra/schemas/: po_bapi_createfromdat2.schema.json
ordra/services/: __init__.py  job_service.py
ordra/skills/: __init__.py  customer_template_acme.md  loader.py  registry.py
ordra/trust/: __init__.py  customer_trust.yaml  evaluator.py  trust_decay.yaml  trust_score.py
ordra/ui/: __init__.py  sap_payload_view.py
tests/: test_dag_spec.py
(+7 files in other folders)
